[package]
name = "simpla_vortaro"
description = "Access the Esperanto dictionary Simpla Vortaro"
version = "0.3.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/panicbit/simpla_vortaro_rs"
documentation = "https://docs.rs/simpla_vortaro"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
percent-encoding = "2.1.0"
clap = "2.33.3"
colored = "2.0.0"
itertools = "0.10.1"
textwrap = { version = "0.14.2", features = ["terminal_size"] }
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
